objects/ssot__CalendarEvent__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__ActivityDateTime__c</fullName>
        <label>Activity DateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__ActivityDate__c</fullName>
        <label>Activity Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ssot__AttendeeListText__c</fullName>
        <label>Attendee List</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__CreatedDate__c</fullName>
        <label>Created Date</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DueDate__c</fullName>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ssot__DurationMinutesQuantity__c</fullName>
        <label>Duration Minutes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__EndDateTime__c</fullName>
        <label>End DateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__EndDate__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Calendar Event Id</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__IsAllDayEvent__c</fullName>
        <label>Is All Day Event</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__IsChild__c</fullName>
        <label>Is Child</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__IsException__c</fullName>
        <label>Is Exception</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__IsGroupEvent__c</fullName>
        <label>Is Group Event</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__IsReminderSet__c</fullName>
        <label>Is Reminder Set</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__LastModifiedDate__c</fullName>
        <label>Last Modified Date</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__LocationId__c</fullName>
        <label>Location</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__RecurringEventFrequencyUOM__c</fullName>
        <label>Recurring Event Frequency UOM</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ReminderDateTime__c</fullName>
        <label>Reminder DateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__ServiceAppointmentId__c</fullName>
        <label>Service Appointment</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__StartDateTime__c</fullName>
        <label>Start Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__TopicText__c</fullName>
        <label>Topic</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1709922312527_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CalendarEvent_LocationId_map_Locatio_rel</label>
        <referenceTo>ssot__Location__dlm</referenceTo>
        <relationshipLabel>CalendarEvent_LocationId_map_Locatio_rel</relationshipLabel>
        <relationshipName>rel_1709922312527_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1709922315303_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CalendarEvent_ServiceAppointmentId_m_rel</label>
        <referenceTo>ssot__ServiceAppointment__dlm</referenceTo>
        <relationshipLabel>CalendarEvent_ServiceAppointmentId_m_rel</relationshipLabel>
        <relationshipName>rel_1709922315303_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>